--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "kursova",
+  "name": "my-vercel-app",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "start": "node api/index.js"
+    "dev": "vercel dev",
+    "start": "vercel dev"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^7.6.1",
-    "path": "^0.12.7",
-    "serverless-http": "^3.2.0"
+    "mongodb": "^5.0.0"
   }
 }
