--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "engines": {
     "node": "18.x"
   },
-  "scripts": {
-    "dev": "vercel dev",
-    "start": "vercel dev"
-  },
+"scripts": {
+  "dev": "next dev"
+},
+
   "dependencies": {
     "mongodb": "^5.0.0"
   }
