--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-MONGODB_URI="mongodb+srv://LeksG:1234@cluster0.9iu4p9f.mongodb.net/"
+MONGODB_URI="mongodb+srv://LeksG:1234@cluster0.9iu4p9f.mongodb.net/museum?retryWrites=true&w=majority"
